# input-source-manager

./: Cargo.toml  GEMINI.md  README-jp.md  README.md  build.rs
.github/workflows/: ci.yml
doc/: SPEC-jp.md  SPEC.md
src/: lib.rs  main.rs
swift_src/: InputSourceManager.swift  rust_bridge.swift
tests/: cli_tests.rs
