[package]
name = "input-source-manager"
version = "0.1.0"
edition = "2021"

[dependencies]
core-foundation = "0.9"
core-foundation-sys = "0.8"
libc = "0.2"
objc2 = "0.6.2"
objc2-foundation = "0.3.1"
clap = { version = "4.0", features = ["derive"] }

[[bin]]
name = "macism-rust"
path = "src/main.rs"
